fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,10 @@ img {
 /*End of CSS reset*/
 
 body {
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  margin: 0;
   font-family: "Inter", sans-serif;
 }
 :root {
@@ -58,8 +62,7 @@ body {
   max-width: 1920px;
   display: grid;
   grid-template-columns: 5fr 2fr;
-  grid-template-areas: "input output"
-                    
+  grid-template-areas: "input output";
 }
 .textarea-container {
   display: flex;
@@ -171,7 +174,7 @@ body {
   border: 1px solid rgba(10, 56, 113, 1);
 }
 
-footer{
+footer {
   grid-area: footer;
   width: 100%;
   height: 100px;
